file watcher and output works

--- a/home.html
+++ b/home.html
@@ -15,7 +15,8 @@ Post 1
 <p><strong>Corgis</strong>
 Corgis are a cattle dog with short legs</p>
 
-<p>hello</p>
+<p><strong>Shibas</strong>
+shibas are hunting dogs</p>
 
 
 
