--- a/home.html
+++ b/home.html
@@ -1,25 +1,15 @@
 <!DOCTYPE html>
-
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Static Site Generator</title>
-  </head>
-  <body class="container">
-    
-
-Post 1
-
-<p><strong>Corgis</strong>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <p><strong>Corgis</strong>
 Corgis are a cattle dog with short legs</p>
-
 <p><strong>Shibas</strong>
-shibas are hunting dogs</p>
-
-
-
-    <br />
-  </body>
+shibas are hunting dogs!!!123213</p>
+</body>
 </html>
