building our directory structure

--- a/site/home.html
+++ b/site/home.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <p><strong>Corgis</strong>
-Corgis are a cattle dog with short legs</p>
-<p><strong>Shibas</strong>
+Corgis are a cattle dog with short legs
+asdfasdfas
+<strong>Shibas</strong>
 shibas are hunting dogs!!!123213</p>
 </body>
 </html>
